--- a/first.html
+++ b/first.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Github Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Hello</h1>
     <h2>World</h2>
     <h3>I am here</h3>
+    <p>More paragraph</p>
     
 </body>
 </html>
